--- a/webapp/styles/styles.css
+++ b/webapp/styles/styles.css
@@ -159,6 +159,8 @@ body section .sectionWrapper .right {
   flex: 1 1 100%;
   width: 50%;
   height: 100%;
+  justify-content: center;
+  box-sizing: border-box;
 }
 body section .sectionWrapper .top.container,
 body section .sectionWrapper .bottom.container {
