--- a/webapp/styles/styles.less
+++ b/webapp/styles/styles.less
@@ -196,6 +196,8 @@ body {
             flex: 1 1 100%;
             width: 50%;
             height: 100%;
+            justify-content: center;
+            box-sizing: border-box;
           }
           .top,
           .bottom {
