--- a/webapp/styles/styles.less
+++ b/webapp/styles/styles.less
@@ -225,7 +225,8 @@ body {
         }
 
         &#home {
-          height: 100vh;
+          min-height: 100vh;
+          min-height: -webkit-fill-available;
           // border: 0.25rem solid #1e1e1e;
           // border: 0.25rem solid white;
           padding: 1rem;
