--- a/webapp/styles/styles.less
+++ b/webapp/styles/styles.less
@@ -226,7 +226,7 @@ body {
 
         &#home {
           min-height: 100vh;
-          min-height: -webkit-fill-available;
+          // min-height: -webkit-fill-available;
           // border: 0.25rem solid #1e1e1e;
           // border: 0.25rem solid white;
           padding: 1rem;
@@ -319,6 +319,9 @@ body {
       }
       a {
         color: #dbdbdb !important;
+      }
+      .overlay {
+        cursor: pointer;
       }
 
     }
