--- a/webapp/styles/styles.css
+++ b/webapp/styles/styles.css
@@ -1,3 +1,7 @@
+html {
+  --scroll-behavior: smooth;
+  scroll-behavior: smooth;
+}
 body {
   background: #f5f5f5;
   font-family: "Oswald", serif;
@@ -60,7 +64,7 @@ body header nav {
   animation: showHeader 1s 1s forwards;
 }
 body header nav.right ul {
-  justify-content: start;
+  justify-content: flex-start;
 }
 body header nav.right ul li {
   padding-left: 0;
@@ -72,7 +76,7 @@ body header nav ul {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
 }
 body header nav ul li {
   z-index: 5;
