--- a/webapp/styles/styles.less
+++ b/webapp/styles/styles.less
@@ -2,6 +2,10 @@
 // .maxWidth {
 //     max-width: 1500px;
 // }
+html {
+  --scroll-behavior: smooth;
+  scroll-behavior: smooth;
+}
 body {
     background: #f5f5f5;
     font-family: "Oswald", serif;
@@ -74,7 +78,7 @@ body {
 
             &.right {
               ul {
-                justify-content: start;
+                justify-content: flex-start;
                 li {
                   padding-left: 0;
                 }
@@ -90,7 +94,7 @@ body {
                 display: flex;
                 flex-wrap: wrap;
                 flex-direction: row;
-                justify-content: end;
+                justify-content: flex-end;
 
                 li {
                     z-index: 5;
